<resources>
    <string name="app_name">MyCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scientific">Scientific</string>
    <string name="basic">basic</string>
    <string name="del">del</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="i">i</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="pi">pi</string>
    <string name="e">e</string>
    <string name="percent">%</string>
    <string name="factorial">!</string>
    <string name="root">root</string>
    <string name="power">^</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiply">X</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="equals">=</string>
    <string name="divide">/</string>
</resources>
