<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ff000000"
    android:weightSum="1.0"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/displayId"
            android:autoText="true"
            android:gravity="bottom|end"
            android:textColor="#ffffffff"
            android:textSize="25sp"
            android:background="#ff006699"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:textIsSelectable="false" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.8">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:weightSum="1.0">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/del"
                    android:id="@+id/operationDelId"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_span="2" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seven"
                    android:id="@+id/number7Id"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eight"
                    android:id="@+id/number8Id"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nine"
                    android:id="@+id/number9Id"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:id="@+id/operationAddId"
                    android:layout_column="3"
                    android:layout_row="4"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:id="@+id/number4Id"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    android:id="@+id/number5Id"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/six"
                    android:id="@+id/number6Id"
                    android:layout_column="2"
                    android:layout_row="2"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:id="@+id/operationSubtractId"
                    android:layout_column="3"
                    android:layout_row="3"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:id="@+id/number1Id"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:id="@+id/number2Id"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:id="@+id/number3Id"
                    android:layout_column="2"
                    android:layout_row="3"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiply"
                    android:id="@+id/operationMultiplyId"
                    android:layout_column="3"
                    android:layout_row="2"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decimal"
                    android:id="@+id/decimalId"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/number0Id"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equals"
                    android:id="@+id/operationEqualsId"
                    android:layout_column="2"
                    android:layout_row="4"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divide"
                    android:id="@+id/operationDivideId"
                    android:layout_column="3"
                    android:layout_row="1"
                    android:background="#ff006699"
                    android:textColor="#ffffffff"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</LinearLayout>
